--- a/style.css
+++ b/style.css
@@ -88,3 +88,18 @@ nav button{
     margin-top: 30px;
     overflow:hidden;
 }
+
+.email-signup input{
+    flex:1;
+    border:0;
+    outline: 0;
+    margin-left: 20px;
+
+}
+
+.email-signup button{
+    background: #db0001;
+    border:0;
+    outline: 0;
+    color:#fff;
+}
