--- a/style.css
+++ b/style.css
@@ -102,4 +102,9 @@ nav button{
     border:0;
     outline: 0;
     color:#fff;
+    font-size: 16px;
+    cursor:pointer;
+    padding: 15px 30px;
+
+
 }
